# movatic-challenge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  docker-compose.yml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/gbfs/: client.rs  mod.rs  models.rs
src/gbfs/models/: station_information.rs  station_status.rs
src/routes/: mod.rs  station_information.rs  station_status.rs
ui/: Dockerfile  package-lock.json  package.json
ui/src/: .env.development  App.css  App.tsx  index.tsx
ui/src/api/stations/: information.ts  status.ts
ui/src/components/: stationModal.tsx  stationsTable.tsx
ui/src/containers/: stationsView.tsx
ui/src/utils/: map.ts
