[package]
name = "movatic"
version = "0.1.0"
edition = "2021"



[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
config = "0.14.0"
env_logger = "0.11.5"
futures = "0.3.30"
reqwest = { version = "0.12.7", features = ["blocking","json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.128"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }

[dev-dependencies]
claims = "0.7.1"
wiremock = "0.6.2"
